edit movie genres

--- a/TopMovies/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TopMovies/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -48,6 +48,14 @@
                 </a>
             </li>
 
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item">
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">
+                    <i class="fas fa-fw fa-link"></i>
+                    <span>View the Website</span>
+                </a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
