--- a/TopMovies/Areas/Admin/Views/Movies/Edit.cshtml
+++ b/TopMovies/Areas/Admin/Views/Movies/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TopMovies.Models.Movie
+﻿@model EditMovieViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -37,6 +37,18 @@
                 <label asp-for="ImageUrl" class="control-label"></label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Genres</label>
+                @foreach (Genre genre in Model.Genres)
+                {
+                    <div>
+                        <label>
+                            <input type="checkbox" name="SelectedGenres" value="@genre.Id" @(Model.SelectedGenres.Contains(genre.Id) ? "checked" : "") />
+                            @genre.Name
+                        </label>
+                    </div>
+                }
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
