--- a/TopMovies/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/TopMovies/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 <script>
-    $.validator.methods.number = function (value, element) {
-        return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:\.\d{3})+)?(?:,\d+)?$/.test(value);
-    }
+    // for decimal , (comma) seperator
+    //$.validator.methods.number = function (value, element) {
+    //    return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:\.\d{3})+)?(?:,\d+)?$/.test(value);
+    //}
 </script>
